# monotiles

./: CLAUDE.md  Cargo.toml  FINDINGS.md  README.md  RESEARCH.md  RESEARCH_SUMMARY.md  SAFETILES.md  WISDOM.md
cas/: 49_char_poly_galois.gp  50_pisot_salem.gp  51_spectral_gap.gp  52_number_field_invariants.gp  53_coordinate_ring.gp  54_swap_density.gp  54b_spectre_swap_exact.gp  55_smith_normal_form.gp  56_zeta_mahler.gp  57_gab_hat_density.gp  58_cut_and_project.gp
crates/analysis/: Cargo.toml
crates/analysis/src/: lib.rs  spectral.rs  sturmian.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/domain/: Cargo.toml
crates/domain/src/: coxeter.rs  cucaracha.rs  fields.rs  group_crypto.rs  lib.rs  matrix.rs
crates/iop/: Cargo.toml
crates/iop/src/: fold.rs  hierarchy.rs  lib.rs  merkle.rs  prover.rs  transcript.rs  types.rs  verifier.rs
crates/iop/tests/: iop_integration.rs
crates/tiling/: Cargo.toml
crates/tiling/src/: adjacency.rs  canonical.rs  deflation.rs  gap.rs  geometry.rs  lib.rs  metatile.rs  oneway.rs  recognition.rs  recovery.rs  substitution.rs  vulnerability.rs
crates/tiling/src/systems/: hat.rs  hat_turtle.rs  mod.rs  spectre.rs
rocq/: .gitignore  CoxeterGroup.v  Cucaracha.v  HatSpectral.v  LocalRecoverability.v  Recognizability.v  Sturmian.v  Substitution.v  _CoqProject
