[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Arkworks core
ark-ff = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", features = ["derive"], default-features = false }
ark-std = { version = "0.5", default-features = false }
ark-poly = { version = "0.5", default-features = false }
ark-bls12-381 = { version = "0.5", default-features = false, features = ["scalar_field"] }

# Internal crates
domain = { path = "crates/domain" }
tiling = { path = "crates/tiling" }
analysis = { path = "crates/analysis" }

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }

# Testing
proptest = "1"
