[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain.workspace = true
tiling.workspace = true
analysis.workspace = true
iop.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ark-ff.workspace = true
ark-bls12-381.workspace = true
