[package]
name = "iop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tiling.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
ark-bls12-381.workspace = true
blake3.workspace = true

[dev-dependencies]
analysis.workspace = true
domain.workspace = true
